[UPD] Exponential intensity function

--- a/High Frequency Trading/hft_AS.ipynb
+++ b/High Frequency Trading/hft_AS.ipynb
@@ -73,25 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nouvelle shape: (229008, 5)\n",
+      "Nouvelle shape: (1134002, 5)\n",
       "shape: (5, 5)\n",
       "┌─────────────────────┬──────────┬──────────┬──────────┬──────────┐\n",
       "│ datetime            ┆ open     ┆ high     ┆ low      ┆ close    │\n",
       "│ ---                 ┆ ---      ┆ ---      ┆ ---      ┆ ---      │\n",
       "│ datetime[ms]        ┆ f64      ┆ f64      ┆ f64      ┆ f64      │\n",
       "╞═════════════════════╪══════════╪══════════╪══════════╪══════════╡\n",
-      "│ 2024-10-01 00:00:00 ┆ 63285.85 ┆ 63285.85 ┆ 63282.05 ┆ 63282.05 │\n",
-      "│ 2024-10-01 00:00:05 ┆ 63282.05 ┆ 63297.35 ┆ 63282.05 ┆ 63297.35 │\n",
-      "│ 2024-10-01 00:00:10 ┆ 63297.35 ┆ 63307.75 ┆ 63297.35 ┆ 63307.75 │\n",
-      "│ 2024-10-01 00:00:15 ┆ 63307.75 ┆ 63307.75 ┆ 63307.75 ┆ 63307.75 │\n",
-      "│ 2024-10-01 00:00:20 ┆ 63307.75 ┆ 63315.15 ┆ 63307.75 ┆ 63315.15 │\n",
+      "│ 2024-10-01 00:00:00 ┆ 63285.85 ┆ 63285.85 ┆ 63285.85 ┆ 63285.85 │\n",
+      "│ 2024-10-01 00:00:01 ┆ 63285.85 ┆ 63285.85 ┆ 63282.05 ┆ 63282.05 │\n",
+      "│ 2024-10-01 00:00:02 ┆ 63282.05 ┆ 63282.05 ┆ 63282.05 ┆ 63282.05 │\n",
+      "│ 2024-10-01 00:00:03 ┆ 63282.05 ┆ 63282.05 ┆ 63282.05 ┆ 63282.05 │\n",
+      "│ 2024-10-01 00:00:04 ┆ 63282.05 ┆ 63282.05 ┆ 63282.05 ┆ 63282.05 │\n",
       "└─────────────────────┴──────────┴──────────┴──────────┴──────────┘\n"
      ]
     }
@@ -116,7 +116,7 @@
     "# Correction de l'étape 2 (Resampling)\n",
     "df_resampled = (\n",
     "    df_book\n",
-    "    .group_by_dynamic(\"datetime\", every=\"5s\") # Bougies de 30 secondes\n",
+    "    .group_by_dynamic(\"datetime\", every=\"1s\") \n",
     "    .agg([\n",
     "        pl.col(\"mid_price\").first().alias(\"open\"),\n",
     "        pl.col(\"mid_price\").max().alias(\"high\"),\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -398,6 +398,13 @@
     "else:\n",
     "    print(\"⚠️ df_book manquant. Exécutez les cellules précédentes.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
