[UPD] Slippage: Mark-out

--- a/High Frequency Trading/hft_AS.ipynb
+++ b/High Frequency Trading/hft_AS.ipynb
@@ -132,6 +132,216 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(\"=\"*70)\n",
+    "print(\"🔧 CALCUL CORRIGÉ DU SLIPPAGE\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "\n",
+    "# Paramètres de filtrage\n",
+    "ASOF_TOLERANCE_MS = 100  # 🔑 TOLÉRANCE STRICTE: 100ms max entre trade et snapshot book\n",
+    "MAX_DISTANCE_TO_MID_BPS = 50  # 🔑 FILTRAGE: trades > 50 bps du mid sont suspects\n",
+    "\n",
+    "# 1. Préparation des trades\n",
+    "df_trades_prep = (\n",
+    "    df_trades\n",
+    "    .with_columns([\n",
+    "        pl.from_epoch(pl.col(\"transact_time\"), time_unit=\"ms\").alias(\"trade_time\"),\n",
+    "        pl.col(\"price\").alias(\"trade_price\"),\n",
+    "        pl.col(\"quantity\").alias(\"trade_qty\"),\n",
+    "        pl.col(\"is_buyer_maker\").alias(\"seller_is_taker\"),\n",
+    "    ])\n",
+    "    .sort(\"trade_time\")\n",
+    ")\n",
+    "\n",
+    "# 2. Join asof avec le book + TOLÉRANCE STRICTE\n",
+    "df_book_for_join = (\n",
+    "    df_book\n",
+    "    .select([\"datetime\", \"mid_price\", \"best_bid_price\", \"best_ask_price\"])\n",
+    "    .sort(\"datetime\")\n",
+    ")\n",
+    "\n",
+    "# 🔑 Utilisation de la syntaxe string pour la tolérance (plus compatible)\n",
+    "df_trades_with_book = (\n",
+    "    df_trades_prep\n",
+    "    .join_asof(\n",
+    "        df_book_for_join,\n",
+    "        left_on=\"trade_time\",\n",
+    "        right_on=\"datetime\",\n",
+    "        strategy=\"backward\",\n",
+    "        tolerance=f\"{ASOF_TOLERANCE_MS}ms\",  # 🔑 CORRECTION: syntaxe string\n",
+    "    )\n",
+    "    .filter(pl.col(\"datetime\").is_not_null())\n",
+    ")\n",
+    "\n",
+    "trades_initial = len(df_trades_prep)\n",
+    "trades_matched = len(df_trades_with_book)\n",
+    "print(f\"\\n📊 Join asof avec tolérance de {ASOF_TOLERANCE_MS}ms:\")\n",
+    "print(f\"   Trades initiaux : {trades_initial:,}\")\n",
+    "print(f\"   Trades matchés  : {trades_matched:,}\")\n",
+    "print(f\"   Taux de match   : {trades_matched/trades_initial*100:.2f}%\")\n",
+    "\n",
+    "# 3. Calcul du slippage + distance au mid\n",
+    "df_slippage_raw = (\n",
+    "    df_trades_with_book\n",
+    "    .with_columns([\n",
+    "        ((pl.col(\"best_ask_price\") - pl.col(\"best_bid_price\")) / pl.col(\"mid_price\") * 10000).alias(\"spread_bps\"),\n",
+    "        \n",
+    "        # Slippage vs best bid/ask\n",
+    "        pl.when(pl.col(\"seller_is_taker\"))\n",
+    "          .then((pl.col(\"best_bid_price\") - pl.col(\"trade_price\")) / pl.col(\"best_bid_price\") * 10000)\n",
+    "          .otherwise((pl.col(\"trade_price\") - pl.col(\"best_ask_price\")) / pl.col(\"best_ask_price\") * 10000)\n",
+    "          .alias(\"slippage_bps\"),\n",
+    "        \n",
+    "        # 🔑 Distance au mid (pour filtrage robuste)\n",
+    "        ((pl.col(\"trade_price\") - pl.col(\"mid_price\")).abs() / pl.col(\"mid_price\") * 10000).alias(\"dist_to_mid_bps\"),\n",
+    "    ])\n",
+    "    .filter(pl.col(\"mid_price\") > 0)\n",
+    "    .filter(pl.col(\"trade_price\") > 0)\n",
+    ")\n",
+    "\n",
+    "# 4. Diagnostic: Vérifier la cohérence des données\n",
+    "print(f\"\\n🔍 Diagnostic de cohérence:\")\n",
+    "coherence = df_slippage_raw.select([\n",
+    "    pl.col(\"dist_to_mid_bps\").mean().alias(\"avg_dist_mid\"),\n",
+    "    pl.col(\"dist_to_mid_bps\").quantile(0.95).alias(\"p95_dist_mid\"),\n",
+    "    ((pl.col(\"trade_price\") >= pl.col(\"best_bid_price\")) & \n",
+    "     (pl.col(\"trade_price\") <= pl.col(\"best_ask_price\"))).mean().alias(\"pct_inside_spread\"),\n",
+    "]).to_pandas().iloc[0]\n",
+    "\n",
+    "print(f\"   Distance moyenne au mid  : {coherence['avg_dist_mid']:.2f} bps\")\n",
+    "print(f\"   Distance P95 au mid      : {coherence['p95_dist_mid']:.2f} bps\")\n",
+    "print(f\"   % trades dans le spread  : {coherence['pct_inside_spread']*100:.2f}%\")\n",
+    "\n",
+    "# 5. Filtrage robuste basé sur la distance au mid\n",
+    "df_slippage_filtered = (\n",
+    "    df_slippage_raw\n",
+    "    .filter(pl.col(\"dist_to_mid_bps\") <= MAX_DISTANCE_TO_MID_BPS)  # 🔑 CORRECTION!\n",
+    ")\n",
+    "\n",
+    "trades_filtered = len(df_slippage_raw)\n",
+    "trades_kept = len(df_slippage_filtered)\n",
+    "trades_removed = trades_filtered - trades_kept\n",
+    "\n",
+    "print(f\"\\n🗑️ Filtrage des trades suspects (> {MAX_DISTANCE_TO_MID_BPS} bps du mid):\")\n",
+    "print(f\"   Avant filtrage  : {trades_filtered:,}\")\n",
+    "print(f\"   Après filtrage  : {trades_kept:,}\")\n",
+    "print(f\"   Retirés         : {trades_removed:,} ({trades_removed/trades_filtered*100:.2f}%)\")\n",
+    "\n",
+    "# 6. Statistiques globales (après filtrage)\n",
+    "slippage_stats = df_slippage_filtered.select([\n",
+    "    pl.col(\"slippage_bps\").mean().alias(\"mean\"),\n",
+    "    pl.col(\"slippage_bps\").median().alias(\"median\"),\n",
+    "    pl.col(\"slippage_bps\").std().alias(\"std\"),\n",
+    "    pl.col(\"slippage_bps\").quantile(0.10).alias(\"p10\"),\n",
+    "    pl.col(\"slippage_bps\").quantile(0.25).alias(\"p25\"),\n",
+    "    pl.col(\"slippage_bps\").quantile(0.50).alias(\"p50\"),\n",
+    "    pl.col(\"slippage_bps\").quantile(0.75).alias(\"p75\"),\n",
+    "    pl.col(\"slippage_bps\").quantile(0.90).alias(\"p90\"),\n",
+    "    pl.col(\"slippage_bps\").quantile(0.95).alias(\"p95\"),\n",
+    "    pl.col(\"spread_bps\").mean().alias(\"avg_spread\"),\n",
+    "]).to_pandas().iloc[0]\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"📈 RÉSULTATS - Analyse du slippage (taker vs best bid/ask)\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "print(f\"\\nSpread moyen du marché : {slippage_stats['avg_spread']:.4f} bps\")\n",
+    "\n",
+    "print(\"\\nSlippage réel (bps) - Données nettoyées :\")\n",
+    "print(f\"   Moyenne     : {slippage_stats['mean']:.4f}\")\n",
+    "print(f\"   Médiane     : {slippage_stats['median']:.4f}\")\n",
+    "print(f\"   Écart-type  : {slippage_stats['std']:.4f}\")\n",
+    "print(f\"   P10         : {slippage_stats['p10']:.4f}\")\n",
+    "print(f\"   P25         : {slippage_stats['p25']:.4f}\")\n",
+    "print(f\"   P75         : {slippage_stats['p75']:.4f}\")\n",
+    "print(f\"   P90         : {slippage_stats['p90']:.4f}\")\n",
+    "print(f\"   P95         : {slippage_stats['p95']:.4f}\")\n",
+    "\n",
+    "# 7. Analyse par taille d'ordre (market impact)\n",
+    "quantiles = [0.25, 0.5, 0.75, 0.9, 0.95, 0.99]\n",
+    "\n",
+    "size_quantiles = [\n",
+    "    df_slippage_filtered.select(pl.col(\"trade_qty\").quantile(q)).item()\n",
+    "    for q in quantiles\n",
+    "]\n",
+    "\n",
+    "print(\"\\nDistribution des tailles de trades (unités) :\")\n",
+    "print(f\"   P25: {size_quantiles[0]:.2f} | \"\n",
+    "      f\"P50: {size_quantiles[1]:.2f} | \"\n",
+    "      f\"P75: {size_quantiles[2]:.2f}\")\n",
+    "print(f\"   P90: {size_quantiles[3]:.2f} | \"\n",
+    "      f\"P95: {size_quantiles[4]:.2f} | \"\n",
+    "      f\"P99: {size_quantiles[5]:.2f}\")\n",
+    "\n",
+    "df_by_size = (\n",
+    "    df_slippage_filtered\n",
+    "    .with_columns([\n",
+    "        pl.when(pl.col(\"trade_qty\") <= size_quantiles[0]).then(pl.lit(\"1_tiny\"))\n",
+    "          .when(pl.col(\"trade_qty\") <= size_quantiles[1]).then(pl.lit(\"2_small\"))\n",
+    "          .when(pl.col(\"trade_qty\") <= size_quantiles[2]).then(pl.lit(\"3_medium\"))\n",
+    "          .when(pl.col(\"trade_qty\") <= size_quantiles[3]).then(pl.lit(\"4_large\"))\n",
+    "          .when(pl.col(\"trade_qty\") <= size_quantiles[4]).then(pl.lit(\"5_xlarge\"))\n",
+    "          .otherwise(pl.lit(\"6_whale\"))\n",
+    "          .alias(\"size_bucket\")\n",
+    "    ])\n",
+    "    .group_by(\"size_bucket\")\n",
+    "    .agg([\n",
+    "        pl.len().alias(\"n_trades\"),\n",
+    "        pl.col(\"trade_qty\").mean().alias(\"avg_qty\"),\n",
+    "        pl.col(\"slippage_bps\").mean().alias(\"avg_slip\"),\n",
+    "        pl.col(\"slippage_bps\").median().alias(\"median_slip\"),\n",
+    "        pl.col(\"slippage_bps\").quantile(0.75).alias(\"p75_slip\"),\n",
+    "        pl.col(\"slippage_bps\").quantile(0.95).alias(\"p95_slip\"),\n",
+    "    ])\n",
+    "    .sort(\"size_bucket\")\n",
+    ")\n",
+    "\n",
+    "print(\"\\nSlippage par taille d'ordre :\")\n",
+    "print(df_by_size.to_pandas().to_string(index=False))\n",
+    "\n",
+    "# 8. Calibration finale\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"🎯 CALIBRATION FINALE\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# Utiliser le P75 comme estimateur robuste\n",
+    "SLIPPAGE_CALIBRATED_BPS = slippage_stats['p75']\n",
+    "SLIPPAGE_CALIBRATED = SLIPPAGE_CALIBRATED_BPS / 10000\n",
+    "\n",
+    "# Par taille\n",
+    "small_trades = df_slippage_filtered.filter(pl.col(\"trade_qty\") <= size_quantiles[2])\n",
+    "SLIPPAGE_SMALL_BPS = small_trades.select(pl.col(\"slippage_bps\").quantile(0.75)).item()\n",
+    "\n",
+    "large_trades = df_slippage_filtered.filter(pl.col(\"trade_qty\") > size_quantiles[3])\n",
+    "SLIPPAGE_LARGE_BPS = large_trades.select(pl.col(\"slippage_bps\").quantile(0.75)).item()\n",
+    "\n",
+    "print(f\"\\nSlippage recommandé (P75, en bps) :\")\n",
+    "print(f\"   Petits ordres (≤ P75) : {SLIPPAGE_SMALL_BPS:.3f} bps\")\n",
+    "print(f\"   Tous ordres (global)  : {SLIPPAGE_CALIBRATED_BPS:.3f} bps  ⭐\")\n",
+    "print(f\"   Gros ordres (> P90)   : {SLIPPAGE_LARGE_BPS:.3f} bps\")\n",
+    "\n",
+    "print(f\"\\n✅ Slippage calibré : {SLIPPAGE_CALIBRATED_BPS:.4f} bps ({SLIPPAGE_CALIBRATED*100:.6f}%)\")\n",
+    "\n",
+    "# Vérification de cohérence\n",
+    "if SLIPPAGE_CALIBRATED_BPS > slippage_stats['avg_spread'] * 100:\n",
+    "    print(f\"\\n⚠️ ATTENTION: Le slippage ({SLIPPAGE_CALIBRATED_BPS:.2f} bps) est {SLIPPAGE_CALIBRATED_BPS/slippage_stats['avg_spread']:.0f}x plus grand que le spread!\")\n",
+    "    print(\"   Cela suggère un problème de market impact important ou des données agrégées.\")\n",
+    "elif SLIPPAGE_CALIBRATED_BPS > slippage_stats['avg_spread'] * 10:\n",
+    "    print(f\"\\n⚠️ Le slippage est {SLIPPAGE_CALIBRATED_BPS/slippage_stats['avg_spread']:.1f}x le spread moyen.\")\n",
+    "    print(\"   Normal pour des ordres taker avec market impact.\")\n",
+    "else:\n",
+    "    print(f\"\\n✅ Le slippage ({SLIPPAGE_CALIBRATED_BPS:.2f} bps) est cohérent avec le spread ({slippage_stats['avg_spread']:.2f} bps).\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
