[UPD] add weekly breakout strategy backtest (BTC)

--- a/High Frequency Trading/hft_vrt_maker.ipynb
+++ b/High Frequency Trading/hft_vrt_maker.ipynb
@@ -17,7 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
+   "id": "f28eb7b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,17 +49,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "id": "513fb80a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "📅 TÉLÉCHARGEMENT DES DONNÉES OCTOBRE 2024 (par jour)\n",
+      "================================================================================\n",
+      "\n",
+      "================================================================================\n",
+      "📥 Téléchargement de bookTicker pour 2024-10\n",
+      "================================================================================\n",
+      "  ⚠️  2024-10-01: Non disponible\n",
+      "  ⚠️  2024-10-02: Non disponible\n",
+      "  ⚠️  2024-10-03: Non disponible\n",
+      "  ⚠️  2024-10-04: Non disponible\n",
+      "  ⚠️  2024-10-05: Non disponible\n",
+      "  ⚠️  2024-10-06: Non disponible\n",
+      "  ⚠️  2024-10-07: Non disponible\n",
+      "  ⚠️  2024-10-08: Non disponible\n",
+      "  ⚠️  2024-10-09: Non disponible\n"
+     ]
+    }
+   ],
    "source": [
+    "import requests\n",
+    "import polars as pl\n",
+    "from io import BytesIO\n",
+    "import zipfile\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
     "# ============================================================================\n",
-    "# PARTIE 1 : CHARGEMENT DES DONNÉES"
+    "# TÉLÉCHARGEMENT AUTOMATIQUE DES DONNÉES BINANCE (DAILY)\n",
+    "# ============================================================================\n",
+    "\n",
+    "def download_binance_daily(year, month, day, data_type='bookTicker', symbol='BTCUSDT'):\n",
+    "    \"\"\"\n",
+    "    Télécharge les données QUOTIDIENNES depuis Binance\n",
+    "    \"\"\"\n",
+    "    # Formatter la date (ex: 2024-10-15)\n",
+    "    date_str = f\"{year}-{month:02d}-{day:02d}\"\n",
+    "    \n",
+    "    # URL Binance Data (DAILY au lieu de MONTHLY)\n",
+    "    base_url = \"https://data.binance.vision/data/futures/um/daily\"\n",
+    "    \n",
+    "    if data_type == 'bookTicker':\n",
+    "        filename = f\"BTCUSDT-bookTicker-{date_str}.zip\"\n",
+    "        url = f\"{base_url}/bookTicker/{symbol}/{filename}\"\n",
+    "        csv_name = f\"BTCUSDT-bookTicker-{date_str}.csv\"\n",
+    "    else:  # aggTrades\n",
+    "        filename = f\"BTCUSDT-aggTrades-{date_str}.zip\"\n",
+    "        url = f\"{base_url}/aggTrades/{symbol}/{filename}\"\n",
+    "        csv_name = f\"BTCUSDT-aggTrades-{date_str}.csv\"\n",
+    "    \n",
+    "    try:\n",
+    "        response = requests.get(url, timeout=300)\n",
+    "        response.raise_for_status()\n",
+    "        \n",
+    "        with zipfile.ZipFile(BytesIO(response.content)) as z:\n",
+    "            csv_content = z.read(csv_name)\n",
+    "            return csv_content\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        return None\n",
+    "\n",
+    "def download_month_data(year, month, data_type='bookTicker'):\n",
+    "    \"\"\"\n",
+    "    Télécharge TOUT UN MOIS en combinant les données quotidiennes\n",
+    "    \"\"\"\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"📥 Téléchargement de {data_type} pour {year}-{month:02d}\")\n",
+    "    print(f\"{'='*80}\")\n",
+    "    \n",
+    "    # Déterminer le nombre de jours dans le mois\n",
+    "    if month == 12:\n",
+    "        next_month = datetime(year + 1, 1, 1)\n",
+    "    else:\n",
+    "        next_month = datetime(year, month + 1, 1)\n",
+    "    \n",
+    "    last_day = (next_month - timedelta(days=1)).day\n",
+    "    \n",
+    "    all_data = []\n",
+    "    success_count = 0\n",
+    "    \n",
+    "    for day in range(1, last_day + 1):\n",
+    "        date_str = f\"{year}-{month:02d}-{day:02d}\"\n",
+    "        csv_content = download_binance_daily(year, month, day, data_type)\n",
+    "        \n",
+    "        if csv_content:\n",
+    "            # Charger directement en Polars\n",
+    "            df_day = pl.read_csv(BytesIO(csv_content))\n",
+    "            all_data.append(df_day)\n",
+    "            success_count += 1\n",
+    "            print(f\"  ✅ {date_str}: {len(df_day):,} lignes\")\n",
+    "        else:\n",
+    "            print(f\"  ⚠️  {date_str}: Non disponible\")\n",
+    "    \n",
+    "    if all_data:\n",
+    "        # Combiner tous les jours\n",
+    "        df_combined = pl.concat(all_data)\n",
+    "        \n",
+    "        # Sauvegarder\n",
+    "        output_filename = f\"BTCUSD_PERP-{data_type}-{year}-{month:02d}.csv\"\n",
+    "        df_combined.write_csv(output_filename)\n",
+    "        \n",
+    "        print(f\"\\n  ✅ Sauvegardé: {output_filename}\")\n",
+    "        print(f\"  📊 Total: {len(df_combined):,} lignes sur {success_count} jours\")\n",
+    "        \n",
+    "        return df_combined, output_filename\n",
+    "    else:\n",
+    "        print(f\"\\n  ❌ Aucune donnée disponible\")\n",
+    "        return None, None\n",
+    "\n",
+    "# ============================================================================\n",
+    "# TÉLÉCHARGER OCTOBRE 2024\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"=\"*80)\n",
+    "print(\"📅 TÉLÉCHARGEMENT DES DONNÉES OCTOBRE 2024 (par jour)\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "# Télécharger le bookTicker\n",
+    "df_book, book_file = download_month_data(2024, 10, data_type='bookTicker')\n",
+    "\n",
+    "# Télécharger les aggTrades\n",
+    "df_trades, trades_file = download_month_data(2024, 10, data_type='aggTrades')\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"✅ TÉLÉCHARGEMENT TERMINÉ\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "if df_book is not None and df_trades is not None:\n",
+    "    # Afficher les dates extrêmes\n",
+    "    df_book_with_time = df_book.with_columns([\n",
+    "        pl.from_epoch(pl.col(\"transaction_time\"), time_unit=\"ms\").alias(\"datetime\")\n",
+    "    ])\n",
+    "    \n",
+    "    date_min = df_book_with_time[\"datetime\"].min()\n",
+    "    date_max = df_book_with_time[\"datetime\"].max()\n",
+    "    duration_days = (date_max - date_min).total_seconds() / (24 * 3600)\n",
+    "    \n",
+    "    print(f\"\\n📅 PÉRIODE DES DONNÉES:\")\n",
+    "    print(f\"  Date de début: {date_min}\")\n",
+    "    print(f\"  Date de fin:   {date_max}\")\n",
+    "    print(f\"  Durée:         {duration_days:.1f} jours\")\n",
+    "    \n",
+    "    print(f\"\\n📊 RÉSUMÉ:\")\n",
+    "    print(f\"  Book:   {len(df_book):,} lignes\")\n",
+    "    print(f\"  Trades: {len(df_trades):,} lignes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "id": "5272af59",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +245,6 @@
     }
    ],
    "source": [
-    "# ============================================================================\n",
     "\n",
     "print(\"=\"*80)\n",
     "print(\"PARTIE 1 : CHARGEMENT DES DONNÉES\")\n",
@@ -163,7 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "id": "27dedb7b",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +706,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "id": "a23846c2",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +760,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "id": "a51eadae",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +825,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "id": "db28d32a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +836,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "id": "d3b645be",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +907,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "id": "54f69a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "054704bd",
    "metadata": {},
    "outputs": [
@@ -890,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "192f2f03",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "c71a45cb",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "67ef316e",
    "metadata": {},
    "outputs": [
@@ -2050,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "bdbae664",
    "metadata": {},
    "outputs": [
@@ -2143,7 +2296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "1a922d88",
    "metadata": {},
    "outputs": [
@@ -2228,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "e44e4dd8",
    "metadata": {},
    "outputs": [
@@ -2325,7 +2478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "aee38eec",
    "metadata": {},
    "outputs": [
