[UPD] New INFRA

--- a/High Frequency Trading/GLFT.ipynb
+++ b/High Frequency Trading/GLFT.ipynb
@@ -2024,7 +2024,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "536099d7",
       "metadata": {},
       "outputs": [
@@ -2343,10 +2343,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "0a3c90e1",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Market (Buy&Hold) full-month: 7.38%\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>max_spread_bps</th>\n",
+              "      <th>gamma</th>\n",
+              "      <th>vrt_alpha_bps</th>\n",
+              "      <th>final_perf</th>\n",
+              "      <th>alpha_vs_bh</th>\n",
+              "      <th>fills</th>\n",
+              "      <th>fills_per_bar</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.02</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>17.150876</td>\n",
+              "      <td>9.766690</td>\n",
+              "      <td>82592</td>\n",
+              "      <td>0.159323</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.02</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>15.399463</td>\n",
+              "      <td>8.015277</td>\n",
+              "      <td>97522</td>\n",
+              "      <td>0.188124</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.05</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>10.902789</td>\n",
+              "      <td>3.518603</td>\n",
+              "      <td>65715</td>\n",
+              "      <td>0.126767</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   max_spread_bps  gamma  vrt_alpha_bps  final_perf  alpha_vs_bh  fills   \n",
+              "0             2.0   0.02            1.0   17.150876     9.766690  82592  \\\n",
+              "1             2.0   0.02            2.0   15.399463     8.015277  97522   \n",
+              "2             2.0   0.05            1.0   10.902789     3.518603  65715   \n",
+              "\n",
+              "   fills_per_bar  \n",
+              "0       0.159323  \n",
+              "1       0.188124  \n",
+              "2       0.126767  "
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "# Re-test FULL-MONTH sur les meilleurs paramètres du grid-search (top N)\n",
         "\n",
